force-app/main/default/objects/recTypesContract__c/recTypesContract__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - eNett Contract</label>
</CustomObject>