force-app/main/default/objects/recTypesContract__c/fields/eNett_Contract_Generic__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract_Generic__c</fullName>
    <label>eNett Contract Generic</label>
    <length>18</length>
    <type>Text</type>
</CustomField>