force-app/main/default/objects/recTypesContract__c/fields/eNett_Custom_Contract__c.field-meta.xml
<CustomField>
    <fullName>eNett_Custom_Contract__c</fullName>
    <label>eNett Custom Contract</label>
    <length>18</length>
    <type>Text</type>
</CustomField>