force-app/main/default/objects/recTypesContract__c/fields/eNett_EFT_Contract__c.field-meta.xml
<CustomField>
    <fullName>eNett_EFT_Contract__c</fullName>
    <label>eNett EFT Contract</label>
    <length>18</length>
    <type>Text</type>
</CustomField>