force-app/main/default/objects/recTypesContract__c/fields/eNett_Tiered_Contract__c.field-meta.xml
<CustomField>
    <fullName>eNett_Tiered_Contract__c</fullName>
    <label>eNett Tiered Contract</label>
    <length>18</length>
    <type>Text</type>
</CustomField>