force-app/main/default/objects/recTypesContract__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <label>Referrer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>