force-app/main/default/objects/recTypesContract__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <length>18</length>
    <type>Text</type>
</CustomField>